fix(images): avoid blurry images (#9591)
When using 100% display scaling on 1X screens, images included on the website appear blurry. They inherit the size of the actual image, but are then pushed in by the border around them, making them no longer pixel-aligned.

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -87,6 +87,8 @@
     background: #fff;
     border: 1px solid var(--border-primary) !important;
     border-radius: var(--elem-radius);
+    /* Required to prevent the border from scaling images, making them look blurry. */
+    box-sizing: content-box;
     /* Required for alt texts. */
     color: #1b1b1b;
     display: inline-block;
